tests/rosetta/out/Smalltalk/achilles-numbers.out
/workspace/mochi/tests/rosetta/out/Smalltalk/achilles-numbers.st:112: parse error, expected '|' or identifier
